; ModuleID = '/home/carl/AnghaBench/lede/package/libs/libnl-tiny/src/extr_object.c_nl_object_free.c'
source_filename = "/home/carl/AnghaBench/lede/package/libs/libnl-tiny/src/extr_object.c_nl_object_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nl_object = type { i64, i64 }
%struct.nl_object_ops = type { i32 (%struct.nl_object.0*)* }
%struct.nl_object.0 = type opaque

@.str = private unnamed_addr constant [35 x i8] c"Warning: Freeing object in use...\0A\00", align 1
@.str.1 = private unnamed_addr constant [17 x i8] c"Freed object %p\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @nl_object_free(%struct.nl_object* %0) #0 {
  %2 = alloca %struct.nl_object*, align 8
  %3 = alloca %struct.nl_object_ops*, align 8
  store %struct.nl_object* %0, %struct.nl_object** %2, align 8
  %4 = load %struct.nl_object*, %struct.nl_object** %2, align 8
  %5 = call %struct.nl_object_ops* @obj_ops(%struct.nl_object* %4)
  store %struct.nl_object_ops* %5, %struct.nl_object_ops** %3, align 8
  %6 = load %struct.nl_object*, %struct.nl_object** %2, align 8
  %7 = getelementptr inbounds %struct.nl_object, %struct.nl_object* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = icmp sgt i64 %8, 0
  br i1 %9, label %10, label %12

10:                                               ; preds = %1
  %11 = call i32 (i32, i8*, ...) @NL_DBG(i32 1, i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str, i64 0, i64 0))
  br label %12

12:                                               ; preds = %10, %1
  %13 = load %struct.nl_object*, %struct.nl_object** %2, align 8
  %14 = getelementptr inbounds %struct.nl_object, %struct.nl_object* %13, i32 0, i32 1
  %15 = load i64, i64* %14, align 8
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %20

17:                                               ; preds = %12
  %18 = load %struct.nl_object*, %struct.nl_object** %2, align 8
  %19 = call i32 @nl_cache_remove(%struct.nl_object* %18)
  br label %20

20:                                               ; preds = %17, %12
  %21 = load %struct.nl_object_ops*, %struct.nl_object_ops** %3, align 8
  %22 = getelementptr inbounds %struct.nl_object_ops, %struct.nl_object_ops* %21, i32 0, i32 0
  %23 = load i32 (%struct.nl_object.0*)*, i32 (%struct.nl_object.0*)** %22, align 8
  %24 = icmp ne i32 (%struct.nl_object.0*)* %23, null
  br i1 %24, label %25, label %32

25:                                               ; preds = %20
  %26 = load %struct.nl_object_ops*, %struct.nl_object_ops** %3, align 8
  %27 = getelementptr inbounds %struct.nl_object_ops, %struct.nl_object_ops* %26, i32 0, i32 0
  %28 = load i32 (%struct.nl_object.0*)*, i32 (%struct.nl_object.0*)** %27, align 8
  %29 = load %struct.nl_object*, %struct.nl_object** %2, align 8
  %30 = bitcast %struct.nl_object* %29 to %struct.nl_object.0*
  %31 = call i32 %28(%struct.nl_object.0* %30)
  br label %32

32:                                               ; preds = %25, %20
  %33 = load %struct.nl_object*, %struct.nl_object** %2, align 8
  %34 = call i32 @free(%struct.nl_object* %33)
  %35 = load %struct.nl_object*, %struct.nl_object** %2, align 8
  %36 = call i32 (i32, i8*, ...) @NL_DBG(i32 4, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.1, i64 0, i64 0), %struct.nl_object* %35)
  ret void
}

declare dso_local %struct.nl_object_ops* @obj_ops(%struct.nl_object*) #1

declare dso_local i32 @NL_DBG(i32, i8*, ...) #1

declare dso_local i32 @nl_cache_remove(%struct.nl_object*) #1

declare dso_local i32 @free(%struct.nl_object*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
